--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.53MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.55MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-324.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-437.1KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇻🇳 越南-5.75MB/s(Youtube:不良林), server: 103.173.255.127, port: 28000, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-306.2KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: bSdsFZtHhbAl}
+  - {name: 🇨🇳 中国-3.38MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇨🇳 中国-415.0KB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-309.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-2.03MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-380.5KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-2.44MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-926.1KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-352.2KB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-311.1KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇨🇳 中国-432.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-324.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.1KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-926.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-324.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.1KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-926.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-324.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.1KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-926.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-324.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.1KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-926.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-324.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.1KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-926.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-324.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.1KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-926.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-324.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.1KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-926.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
