--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇨🇳 中国-207.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 未知国家-152.6KB/s(Youtube:不良林), server: lu1.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3908b44d1be0a4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: lu1.gogogoo.cyou}}
-  - {name: 🇨🇳 中国-432.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-348.4KB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
   - {name: 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林), server: rn.v2yyds.com, port: 31911, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: rn.v2yyds.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.15MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 未知国家-2.07MB/s(Youtube:不良林), server: jp.azzhuangaping.tw, port: 80, type: vmess, uuid: cebeb605-6e5e-3a13-a0ce-1ee247f91bf7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /adobe, ws-headers: {Host: jp.azzhuangaping.tw}}
+  - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-381.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-352.2KB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
   - {name: 🇸🇬 新加坡-1.62MB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.33MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.23MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-378.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-207.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 未知国家-152.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 未知国家-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇨🇳 中国-207.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 未知国家-152.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 未知国家-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,15 +53,15 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-207.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 未知国家-152.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 未知国家-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,30 +73,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇨🇳 中国-207.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 未知国家-152.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 未知国家-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇨🇳 中国-207.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 未知国家-152.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 未知国家-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -104,15 +104,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-207.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 未知国家-152.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 未知国家-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,15 +129,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-207.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 未知国家-152.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 未知国家-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
