--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-2.62MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇨🇳 中国-381.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 (已存活5天)香港-3.91MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇳 中国-160.9KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇨🇳 中国-378.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-337.5KB/s(Youtube:不良林), server: 120.233.150.146, port: 65024, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-332.1KB/s(Youtube:不良林), server: 120.233.150.146, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇸🇬 新加坡-2.08MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 12337, type: trojan, password: df8ebf95-bd60-4f7e-a505-fe8db5ba3342, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.23MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-241.5KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-417.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-1.16MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇬🇧 英国-484.6KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-1.16MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-417.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.9KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-3.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-337.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
       - 🇬🇧 英国-484.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.9KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-3.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-337.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
       - 🇬🇧 英国-484.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.9KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-3.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-337.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
       - 🇬🇧 英国-484.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.62MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-3.91MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.9KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-3.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-337.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
       - 🇬🇧 英国-484.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.9KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-3.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-337.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
       - 🇬🇧 英国-484.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.9KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-3.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-337.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
       - 🇬🇧 英国-484.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.9KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-3.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-337.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
       - 🇬🇧 英国-484.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
