--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,117 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-523.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 未知国家-3.99MB/s(Youtube:不良林), server: jp.azzhuangaping.tw, port: 80, type: vmess, uuid: cebeb605-6e5e-3a13-a0ce-1ee247f91bf7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /adobe, ws-headers: {Host: jp.azzhuangaping.tw}}
-  - {name: 🇭🇰 香港-3.73MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇨🇳 中国-2.23MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
-  - {name: 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇨🇳 中国-480.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇭🇰 (已存活5天)香港-3.92MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
   - {name: 🇨🇳 中国-3.01MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-216.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇭🇰 香港-1.25MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-2.23MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-324.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1007.8KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-3.70MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-360.9KB/s(Youtube:不良林), server: 120.233.150.146, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇦 加拿大-1.30MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-523.5KB/s(Youtube:不良林)
-      - 未知国家-3.99MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-216.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-324.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1007.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-523.5KB/s(Youtube:不良林)
-      - 未知国家-3.99MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-216.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-324.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1007.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-523.5KB/s(Youtube:不良林)
-      - 未知国家-3.99MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-216.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-324.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1007.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.73MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.92MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.25MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.70MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-523.5KB/s(Youtube:不良林)
-      - 未知国家-3.99MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-216.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-324.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1007.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-523.5KB/s(Youtube:不良林)
-      - 未知国家-3.99MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-216.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-324.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1007.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-523.5KB/s(Youtube:不良林)
-      - 未知国家-3.99MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-216.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-324.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1007.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +131,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-523.5KB/s(Youtube:不良林)
-      - 未知国家-3.99MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-216.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-324.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1007.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
